--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,18 @@
 {
   "presets": [
-    "es2015"
+    ["es2015", {"loose": true}],
+    "stage-0"
   ],
-
   "plugins": [
+    [
+      "transform-runtime", {
+        "helpers": true,
+        "polyfill": false,
+        "regenerator": false,
+        "moduleName": "babel-runtime"
+      }
+    ],
     "transform-class-properties",
-    "transform-class-constructor-call",
     "add-module-exports"
   ]
 }
