--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "parallux",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Parallax made right. High Performant, smooth & jank Free",
   "main": "dist/parallux.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch-js": "NODE_ENV=development webpack -wd",
-    "build": "NODE_ENV=production webpack -p",
-    "build-debug": "NODE_ENV=production webpack -d",
-    "dist": "npm run build && npm run build-lib",
+    "build": "cross-env NODE_ENV=production npm run dist && npm run build:lib",
+    "build:debug": "NODE_ENV=production webpack -d",
+    "dist": "cross-env NODE_ENV=production webpack -p",
     "start": "run-p watch-js devserver",
-    "build-lib": "BABEL_ENV=production babel src -d dist",
+    "build:lib": "cross-env NODE_ENV=production babel src -d dist",
     "devserver": "webpack-dev-server --config ./webpack.config.js --inline --open"
   },
   "repository": {
@@ -28,6 +28,9 @@
     "performant",
     "jank free"
   ],
+  "release-script": {
+    "altPkgRootFolder": "lib"
+  },
   "author": "Sönke Kluth <soenke.kluth@gmail.com> (http://soenkekluth.com/)",
   "license": "MIT",
   "bugs": {
@@ -35,24 +38,25 @@
   },
   "homepage": "https://github.com/soenkekluth/parallux#readme",
   "devDependencies": {
-    "babel-cli": "6.18.0",
-    "babel-core": "6.18.2",
-    "babel-loader": "6.2.8",
-    "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-transform-class-constructor-call": "6.18.0",
-    "babel-plugin-transform-class-properties": "6.19.0",
-    "babel-plugin-transform-es2015-classes": "6.18.0",
-    "babel-plugin-transform-proto-to-assign": "6.9.0",
-    "babel-preset-es2015": "6.18.0",
-    "mocha": "3.2.0",
-    "npm-run-all": "3.1.1",
-    "should": "11.1.1",
-    "webpack": "1.13.3",
-    "webpack-dev-server": "1.16.2"
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-runtime": "6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "cross-env": "^3.1.3",
+    "mocha": "^3.2.0",
+    "npm-run-all": "^3.1.2",
+    "should": "^11.1.2",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "lazyview": "0.5.2",
-    "object-assign": "4.1.0",
-    "style-prefixer": "1.1.0"
+    "babel-runtime": "^6.20.0",
+    "lazyview": "^0.6.1",
+    "object-assign": "^4.1.0",
+    "style-prefixer": "^1.1.1"
   }
 }
