--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "parallux",
-  "version": "1.5.3",
+  "version": "1.6.0",
   "description": "Parallax made right. High Performant, smooth & jank Free",
-  "main": "dist/parallux.js",
+  "main": "lib/parallux.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch-js": "NODE_ENV=development webpack -wd",
@@ -10,7 +10,7 @@
     "build:debug": "NODE_ENV=production webpack -d",
     "dist": "cross-env NODE_ENV=production webpack -p",
     "start": "run-p watch-js devserver",
-    "build:lib": "cross-env NODE_ENV=production babel src -d dist",
+    "build:lib": "cross-env NODE_ENV=production babel src -d lib",
     "devserver": "webpack-dev-server --config ./webpack.config.js --inline --open"
   },
   "repository": {
@@ -48,14 +48,14 @@
     "babel-preset-stage-0": "^6.16.0",
     "cross-env": "^3.1.3",
     "mocha": "^3.2.0",
-    "npm-run-all": "^3.1.2",
+    "npm-run-all": "^4.0.0",
     "should": "^11.1.2",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
-    "lazyview": "^0.6.2",
+    "lazyview": "^0.7.0",
     "object-assign": "^4.1.0",
     "style-prefixer": "^1.1.1"
   }
