optimize build for es6

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 .DS_Store
 *.sublime-workspace
 npm-debug.log
-
 # Project folders to ignore
 node_modules
 .tern-port
+.nyc_output
 *.map
+lib
+coverage
+es
