--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,53 @@
 {
-  "presets": [
-    ["es2015", {"loose": true}],
-    "stage-0"
-  ],
-  "plugins": [
-    [
-      "transform-runtime", {
-        "helpers": true,
-        "polyfill": false,
-        "regenerator": false,
-        "moduleName": "babel-runtime"
-      }
-    ],
-    "transform-class-properties",
-    "add-module-exports"
-  ]
+  "env": {
+    "dist": {
+      "presets": [
+       ["es2015", {"loose": true}],
+       "stage-0"
+      ],
+      "plugins": [
+      [
+          "transform-runtime", {
+            "helpers": true,
+            "polyfill": false,
+            "regenerator": true,
+            "moduleName": "babel-runtime"
+          }
+        ],
+        "add-module-exports"
+      ]
+    },
+    "lib": {
+      "presets": [
+        "es2015-tree-shaking"
+      ],
+      "plugins": [
+        ["transform-es2015-modules-commonjs", { "loose": true }],
+        [
+          "transform-runtime", {
+            "helpers": true,
+            "polyfill": false,
+            "regenerator": true,
+            "moduleName": "babel-runtime"
+          }
+        ],
+        "add-module-exports"
+      ]
+    },
+    "es": {
+      "presets": [
+        "es2015-tree-shaking"
+      ],
+      "plugins": [
+        [
+          "transform-runtime", {
+            "helpers": true,
+            "polyfill": false,
+            "regenerator": true,
+            "moduleName": "babel-runtime"
+          }
+        ]
+      ]
+    }
+  }
 }
