--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
   "name": "parallux",
-  "version": "1.8.1",
+  "version": "1.9.1",
   "description": "Parallax made right. High Performant, smooth & jank Free",
   "main": "lib/parallux.js",
+  "module": "es/parallux.js",
+  "jsnext:main": "es/parallux.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch-js": "NODE_ENV=development webpack -wd",
-    "build": "cross-env NODE_ENV=production npm run dist && npm run build:lib",
-    "build:debug": "NODE_ENV=production webpack -d",
-    "dist": "cross-env NODE_ENV=production webpack -p",
+    "build": "cross-env NODE_ENV=production run dist && run build:lib && run build:es",
+    "build-debug": "cross-env NODE_ENV=production webpack -d",
+    "dist": "cross-env BABEL_ENV=dist webpack -p",
     "start": "run-p watch-js devserver",
-    "build:lib": "cross-env NODE_ENV=production babel src -d lib",
+    "build:lib": "cross-env BABEL_ENV=lib babel src -d lib",
+    "build:es": "cross-env BABEL_ENV=es babel src -d es",
     "devserver": "webpack-dev-server --config ./webpack.config.js --inline --open"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/soenkekluth/parallux.git"
   },
+  "files": [
+    "dist",
+    "lib",
+    "src",
+    "es"
+  ],
   "keywords": [
     "parallux",
     "parallax",
@@ -38,25 +47,28 @@
   },
   "homepage": "https://github.com/soenkekluth/parallux#readme",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-runtime": "6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "cross-env": "^3.1.3",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2015-tree-shaking": "^1.0.1",
+    "babel-preset-stage-0": "^6.22.0",
+    "cross-env": "^3.2.4",
     "mocha": "^3.2.0",
-    "npm-run-all": "^4.0.1",
-    "should": "^11.1.2",
+    "npm-run-all": "^4.0.2",
+    "run-proxy": "1.0.1",
+    "should": "^11.2.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "babel-runtime": "^6.20.0",
-    "lazyview": "^0.9.2",
-    "object-assign": "^4.1.1",
-    "style-prefixer": "^1.1.1"
+    "babel-runtime": ">=6.20.0",
+    "lazyview": ">=1.1.1",
+    "object-assign": ">=4.1.1",
+    "style-prefixer": ">=1.1.1"
   }
 }
