--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parallux",
-  "version": "1.9.1",
+  "version": "1.9.2",
   "description": "Parallax made right. High Performant, smooth & jank Free",
   "main": "lib/parallux.js",
   "module": "es/parallux.js",
@@ -67,7 +67,7 @@
   },
   "dependencies": {
     "babel-runtime": ">=6.20.0",
-    "lazyview": ">=1.1.1",
+    "lazyview": "1.1.7",
     "object-assign": ">=4.1.1",
     "style-prefixer": ">=1.1.1"
   }
